--- a/Capture-Beauty/profile.css
+++ b/Capture-Beauty/profile.css
@@ -1,3 +1,29 @@
+/* Nav bar overide -------------------------------------------Nav bar overide -------------------------------------------Nav bar overide ------------------------------------------- */
+
+.navbar {
+    min-height: 80px;
+  }
+  
+  .navbar-brand {
+    padding: 0 15px;
+    height: 80px;
+    line-height: 80px;
+  }
+  
+  .navbar-toggle {
+    /* (80px - button height 34px) / 2 = 23px */
+    margin-top: 23px;
+    padding: 9px 10px !important;
+  }
+  
+  @media (min-width: 768px) {
+    .navbar-nav > li > a {
+      /* (80px - line-height of 27px) / 2 = 26.5px */
+      padding-top: 26.5px;
+      padding-bottom: 26.5px;
+      line-height: 27px;
+    }
+  }
 
 /* Profile settings ----------------------------------------------------------------------------------------------------------------------
     ----------------------------------------------------------------------------------------------------------------------------------------*/
@@ -517,10 +543,13 @@ body{
 }
 .db-social .location {
     color: #aea9c3;
-    font-size: 1rem;
+    font-size: 1.5rem;
 }
 .db-social .follow .btn {
-    padding: 10px 30px;
+    padding: 10px 40px ;
+    margin: 10px 10px;
+    width: 50px 50px;
+    height: 50px 50px;
 }
 .btn:not(:disabled):not(.disabled) {
     cursor: pointer;
@@ -578,10 +607,10 @@ body{
 }
 .db-social .head-profile li .counter {
     color: #2c304d;
-    font-size: 1.4rem;
+    font-size: 1.7rem;
     font-weight: 600;
 }
 .db-social .head-profile li .heading {
     color: #aea9c3;
-    font-size: 1rem;
+    font-size: 1.5rem;
 }
